2019-01-09         John E. Malmberg      <wb8tyw@qsl.net>

	* cdefs.h, xalloc.h: For non GCC, have
	__attribute__ definition match regex_internal.h exactly.

2018-12-26         Arnold D. Robbins     <arnold@skeeve.com>

	In a spirit of depressed resignation, synced regex
	files with GNULIB and added new files needed to
	get it to continue to compile. I lose.

	* regcomp.c, regex.c, regex_internal.c, regex_internal.h,
	regexec.c: Sync with GNULIB.
	* libc-config.h, cdefs.h: New files.
	
2018-12-21         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c; Sync with GNULIB, bugfix for \b (\y in gawk)
	in the C locale.

2018-12-18         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (distclean-local): Remove .deps directory.

2018-12-15         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.h, dfa.c: Sync with GNULIB.

2018-10-31         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c (charclass_context): Remove unused function.

2018-10-22         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Update from GNULIB.

2018-09-21         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c, intprops.h: Sync from GNULIB.

2018-09-16         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.in: Regenerated, using Automake 1.16.1.

2018-09-07         Arnold D. Robbins     <arnold@skeeve.com>

	* intprops.h, verify.h: Updated from GNULIB.

2018-08-26         Arnold D. Robbins     <arnold@skeeve.com>

	* regex_internal.c: Sync with GNULIB.

2018-08-22         Daniel Richard G.     <skunk@iSKUNK.ORG>

	* regex_internal.h: Undefine additional macros in order
	to compile on z/OS.

2018-08-10         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNULIB.
	* regcomp.c: Updated from GNULIB and proposed fix applied.

2018-07-26         Arnold D. Robbins     <arnold@skeeve.com>

	* regcomp.c, regex.c, regex.h, regex_internal.c, regex_internal.h,
	regexec.c: Replaced with versions from GNULIB.
